GMM_Main/src/objects/Application3__c.object
<CustomObject>
    <description>SF-424</description>
    <fields>
        <fullName>AC_logo_will_display_on_org_s_website__c</fullName>
        <inlineHelpText>AmeriCorps logo will be proudly displayed on the front page of the organization&apos;s website</inlineHelpText>
        <label>AC logo will display on org&apos;s website</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPLICATION_DATE_TEST__c</fullName>
        <inlineHelpText>APPLICATION DATE TEST</inlineHelpText>
        <label>APPLICATION DATE TEST</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_to_kitchen_and_meal_plan__c</fullName>
        <label>Access to kitchen and meal plan?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accessibility_for_Mbrs_with_Disabilities__c</fullName>
        <inlineHelpText>Accessibility for Persons with Mobility, Vision and/or Hearing.</inlineHelpText>
        <label>Accessibility for Mbrs with Disabilities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_MOU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active MOU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_to__c</fullName>
        <description>This field is shown when NCCC is checked on NOFA. KY</description>
        <label>Addendum to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Cultural_Recreational_Educa__c</fullName>
        <inlineHelpText>Are there additional cultural, recreational, educational experiences and/or options for physical training that your organization can make available to the members during the course of the service project? If so, please specify.</inlineHelpText>
        <label>Additional Experiences for Members</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Details_vista__c</fullName>
        <label>Additional Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>If Yes, Please Explain</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Informationcurrentlyfunded__c</fullName>
        <inlineHelpText>Provide detailed information concerning the funding source and utilization of CNCS funds</inlineHelpText>
        <label>Funding Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Mission__c</fullName>
        <inlineHelpText>Include: brief history of organization, explanation of mission, and how missions is fulfilled through its various programs</inlineHelpText>
        <label>Agency Mission</label>
        <length>268</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amendable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is required because using this flag we are identifying the amendable sub-application #2719-23</description>
        <label>Amendable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_Justification__c</fullName>
        <label>Amendment Justification</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Amendment_Reason__c</fullName>
        <label>Amendment Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmeriCorps_logo_will_display_on_website__c</fullName>
        <inlineHelpText>AmeriCorps logo will be proudly displayed on the front page of organization’s website</inlineHelpText>
        <label>AmeriCorps logo will display on website</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_additional_background_checks__c</fullName>
        <inlineHelpText>If ‘Yes’, please specify what additional background checks are required, as well as how these requirements will be satisfied.</inlineHelpText>
        <label>Any additional background checks?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_possible_exposure_to_safety_hazards__c</fullName>
        <inlineHelpText>If ‘Yes’, please specify what additional background checks are required, as well as how these requirements will be satisfied.</inlineHelpText>
        <label>Any possible exposure to safety hazards?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_potentially_hazardous_chemicals__c</fullName>
        <inlineHelpText>Will members be required to work with potentially hazardous chemicals such as solvents, acids, pesticides, herbicides, adhesives, etc.?</inlineHelpText>
        <label>Any potentially hazardous chemicals?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicant1__c</fullName>
        <label>Applicant</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Delinquent_on_any_Federal_Debt__c</fullName>
        <inlineHelpText>Is the Applicant Delinquent on any Federal Debt?</inlineHelpText>
        <label>Applicant Delinquent on any Federal Debt</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Identifier__c</fullName>
        <description>Applicant Identifier</description>
        <inlineHelpText>Please enter Applicant Identifier</inlineHelpText>
        <label>Applicant Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Applicant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant/User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Due_Date__c</fullName>
        <description>This field replaces the Editable &quot;Application Due Date&quot; field. 
This date is same as the NOFA Application Due Date. Use this field for List views and Reports.</description>
        <formula>NOFA_RFP__r.Applications_due_date__c</formula>
        <label>Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Feedback_Summary__c</fullName>
        <label>Application Feedback Summary</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Application_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area_Code_and_Phone_Number__c</fullName>
        <label>Area Code and Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_type__c</fullName>
        <inlineHelpText>Urban-Cities with &gt;50,000 residents
Suburban-outside of urban areas, &gt;50,000 residents
Rural-doesn&apos;t meet urban/suburban population requirements
Wilderness-unpopulated/sparsely populated areas</inlineHelpText>
        <label>Area type</label>
        <picklist>
            <picklistValues>
                <fullName>Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suburban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wilderness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Areas_Affected_by_Project_Cities_Coutn__c</fullName>
        <inlineHelpText>Areas Affected by Project (Cities, Coutnies, States, etc.)</inlineHelpText>
        <label>Areas Affected by Project</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_of_Quality_Indicators__c</fullName>
        <label>Assessment of Quality Indicators</label>
        <picklist>
            <picklistValues>
                <fullName>GPR Performance Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance with 30 day enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance with 30 day exit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site visit or other monitoring (if applicable)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant opportunities of the grantee to national service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant risks of the grantee to national service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommend to Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Recommend to Fund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for Concept Paper type of Application.</description>
        <inlineHelpText>CNCS Staff member.</inlineHelpText>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assurances_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assurances Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Representative__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used for Notification of Intent to Apply section of the Application.</description>
        <label>Authorized Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoNumber__c</fullName>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Autonumber1__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <formula>NOFA_RFP__r.CFDA_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFDA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPR_First_Aid_Training_Details__c</fullName>
        <inlineHelpText>All members are trained in CPR/first aid &amp; American Red Cross Disaster Service:  An Overview and Shelter Fundamentals.  Describe training you will provide (if necessary) to include any site safety training upon the team&apos;s arrival.</inlineHelpText>
        <label>CPR/First Aid Training Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>This field is shown when NCCC Dates &amp; Questions is checked on NOFA. KY</description>
        <label>Campus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Building_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Capacity Building</label>
        <picklist>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effectiveness &amp; Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale/Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Capacity_Building__c</fullName>
        <label>Capacity Building</label>
        <picklist>
            <picklistValues>
                <fullName>Effectiveness &amp; Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale/Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <defaultValue>&quot;By signing this application, I certify (1) to the statements contained in the list of certifications** and (2) that the statements herein are true, complete and accurate to the best of my knowledge.  I also provide the required assurances** and agree to comply with any resulting terms if I accept an award.  I am aware that any false, fictitious, or fraudulent statements or claims may subject me to criminal, civil, or administrative penalties.  (U.S. Code, Title 218, Section 1001)&quot;</defaultValue>
        <label>Certification</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certifications_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certifications Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Characteristics_Priorities__c</fullName>
        <label>Characteristics &amp; Priorities</label>
        <picklist>
            <picklistValues>
                <fullName>Geo Focus – Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo Focus – Rural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment 21st Century Service Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promise Zones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Cities/Strong Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governor and Mayor Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy State &amp; School Ready to Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Learning Loss Prevention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading at Grade Level by Third Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keeping Kids on Track/Giving 2nd Chances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEM program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEM / Maker Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIG/priority school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Together for Tomorrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Ready for College &amp; Career</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minority Serving Institutions /HBCUs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-H / Land Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Brother&apos;s Keeper/ Youth Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successfully Entering the Workforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philanthropically Undeserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-focus Intermediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Trafficking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Infrastructure projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intergenerational programming</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City1__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityNCCC__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Cities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cityhousing__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citylaundry__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cityprimary__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cityprimarymailing__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clarification_Summary1__c</fullName>
        <label>Clarification Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clarification_Summary__c</fullName>
        <label>Clarification Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ClassYear__c</fullName>
        <label>ClassYear</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleaning_Construction_Products_Used__c</fullName>
        <inlineHelpText>Describe cleaning solvents &amp; construction materials used such as adhesives, oil-based paints, brush cleaners, &amp; thinners. These are not considered toxic/hazardous, these can give off fumes, irritate skin, or other uncomfortable conditions.</inlineHelpText>
        <label>Cleaning &amp; Construction Products Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_Sponsoring_Agency_Information__c</fullName>
        <label>Co-Sponsoring Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Advisory_Name_and_Addresses__c</fullName>
        <label>Community Advisory Name and Addresses</label>
        <picklist>
            <picklistValues>
                <fullName>Already on a file at CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for now until Attachment POC is ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Involvement_with_Organization__c</fullName>
        <inlineHelpText># of volunteers support your organization on a weekly basis? Please describe your volunteer outreach efforts.</inlineHelpText>
        <label>Community Involvement with Organization</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Community_need_for_this_project__c</fullName>
        <inlineHelpText>Describe the community need that will be addressed by this project. This may include poverty rates, education levels, or general assets and challenges facing the community, which relate to the project.</inlineHelpText>
        <label>Community need for this project</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competition_Identification_Number__c</fullName>
        <label>Competition Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_or_Formula__c</fullName>
        <description>This field is for Sub-Applications - Competitive or Formula.</description>
        <label>Competitive or Formula</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_or_Formula_new__c</fullName>
        <formula>TEXT(Prime_Application__r.Competitive_or_Formula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitive or Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Determination__c</fullName>
        <label>Compliance Determination</label>
        <picklist>
            <picklistValues>
                <fullName>Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Compliant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag_AA__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag_Atleast_80_funds__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag_CoA__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag_Match_Met__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag_Notification__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag_OC__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag_TypeofOrg__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date__c</fullName>
        <description>for Concept Paper Reporting purpose</description>
        <formula>NOFA_RFP__r.Concept_Paper_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concept Paper Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Name__c</fullName>
        <label>Concept Paper Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_NumberNCCCCO__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Numberprimary__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Continuation_Changes1__c</fullName>
        <label>Continuation Changes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuation_Changes__c</fullName>
        <label>Continuation Changes</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <formula>NOFA_RFP__r.Corporate_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_Budget_Adequacy__c</fullName>
        <label>Cost-Effectiveness &amp; Budget Adequacy</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_and_Budget_Adequacy_C__c</fullName>
        <label>Cost Effectiveness and Budget Adequacy</label>
        <length>300</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_and_Budget_Adequacy__c</fullName>
        <label>Cost Effectiveness and Budget Adequacy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share__c</fullName>
        <inlineHelpText>Does this Program require cost share?</inlineHelpText>
        <label>Cost Share</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Could_this_be_accomplished_with_contract__c</fullName>
        <label>Can Contracted Labor be Used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counties__c</fullName>
        <label>Counties</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <formula>Project__r.Organization__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_FAPIIS_Review__c</fullName>
        <description>Field is Used for Final Decision Process of Application. 
US # 1783. KY</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_by_State__c</fullName>
        <description>Date Received by State</description>
        <inlineHelpText>Date Received by State</inlineHelpText>
        <label>Date Received by State</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Define_Community_Need__c</fullName>
        <inlineHelpText>This may include poverty rates, education levels, or general assets and challenges facing the community, which relate to the project</inlineHelpText>
        <label>Define Community Need</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demonstrates_Ethics_Integrity__c</fullName>
        <description>Field is Used for Final Decision Process of Application. 
US # 1783. KY</description>
        <label>Demonstrates Ethics &amp; Integrity</label>
        <picklist>
            <controllingField>Information_available_FAPIIS_Review__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>